--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-ar">
   <head>
     <link rel="stylesheet" type="text/css" href="../src/animation.css">
     <meta charset="utf-8" />
