--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="es-ar">
   <head>
-    <link rel="stylesheet" type="text/css" href="../src/animation.css">
+    <link rel="stylesheet" type="text/css" href="../src/animation.css" />
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
+   
+    <link rel="icon" type="image/ico" sizes="32x32" href="./favicon.ico" />
+   
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
